--- a/springboot-servicio-item/src/main/resources/application.properties
+++ b/springboot-servicio-item/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.application.name=servicio-items
-server.port=8002
+spring.application.name= servicio-items
+server.port= 8002
 #servicio-productos.ribbon.listOfServers=localhost:9001,localhost:8001
-
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
+#ribbon.ConnectTimeout: 3000
+#ribbon.ReadTimeout: 10000
