--- a/springboot-servicio-eureka-server/src/main/resources/application.properties
+++ b/springboot-servicio-eureka-server/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.application.name=servicio-eureka-server
-server.port=8761
+spring.application.name=servicio-gateway-server
+server.port=8090
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
