--- a/springboot-servicio-eureka-server/src/main/resources/application.properties
+++ b/springboot-servicio-eureka-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=servicio-gateway-server
-server.port=8090
+spring.application.name=servicio-eureka-server
+server.port=8761
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
