--- a/springboot-servicio-gateway-server/src/main/resources/application.yml
+++ b/springboot-servicio-gateway-server/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
       - id: servicio-productos
         uri: lb://servicio-productos
         predicates:          - Path=/api/productos/**
+          - Header= token, \d+
+          - Method=GET, POST
+          - Query=color, verde
+          - Cookie=color, azul
         filters:          - StripPrefix=2
           - EjemploCookie=Hola mi mensaje personalizado, usuario, AndresGuzman
       - id: servicio-items
