--- a/springboot-servicio-productos/pom.xml
+++ b/springboot-servicio-productos/pom.xml
@@ -55,6 +55,19 @@
 				spring-cloud-starter-netflix-eureka-client
 			</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+    		<dependency>
+    			<groupId>org.springframework.cloud</groupId>
+    			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+    		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
