--- a/springboot-servicio-zuul-server/src/main/resources/application.properties
+++ b/springboot-servicio-zuul-server/src/main/resources/application.properties
@@ -19,3 +19,7 @@ zuul.routes.security.sensitive-headers=Cookie,Set-Cookie
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
 ribbon.ConnectTimeout: 3000
 ribbon.ReadTimeout: 10000
+
+spring.sleuth.sampler.probability=1.0
+spring.zipkin.base-url=http://localhost:9411/
+spring.zipkin.sender.type=rabbit
