--- a/springboot-servicio-zuul-server/src/main/resources/application.properties
+++ b/springboot-servicio-zuul-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=servicio-zuul-server
 server.port=8090
 
-eureka.client.serviceUrl.defaultZone=http://servicio-eureka-server:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 zuul.routes.productos.service-id=servicio-productos
 zuul.routes.productos.path=/api/productos/**
@@ -21,5 +21,5 @@ ribbon.ConnectTimeout: 3000
 ribbon.ReadTimeout: 10000
 
 spring.sleuth.sampler.probability=1.0
-spring.zipkin.base-url=http://zipkin-server:9411/
+spring.zipkin.base-url=http://localhost:9411/
 spring.zipkin.sender.type=rabbit
