--- a/springboot-servicio-oauth/src/main/resources/application.properties
+++ b/springboot-servicio-oauth/src/main/resources/application.properties
@@ -1,14 +1,9 @@
 spring.application.name=servicio-oauth
 server.port=9100
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-spring.config.import=optional:configserver:http://localhost:8080
+eureka.client.serviceUrl.defaultZone=http://servicio-eureka-server:8761/eureka/
+
+spring.config.import=optional:configserver:
 
 spring.sleuth.sampler.probability=1.0
-spring.zipkin.base-url=http://localhost:9411/
+spring.zipkin.base-url=http://zipkin-server:9411/
 spring.zipkin.sender.type=rabbit
-##spring.cloud.config.allowOverride=true
-##eureka.client.enabled=true
-##spring.cloud.config.overrideNone=true
-##spring.cloud.config.overrideSystemProperties=false
-##eureka.client.register-with-eureka=false
-##eureka.client.fetch-registry=false
