--- a/springboot-servicio-oauth/src/main/resources/application.properties
+++ b/springboot-servicio-oauth/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=servicio-oauth
 server.port=9100
 eureka.client.serviceUrl.defaultZone=http://servicio-eureka-server:8761/eureka/
 
-spring.config.import=optional:configserver:
+spring.config.import=optional:configserver:http://config-server:8080
 
 spring.sleuth.sampler.probability=1.0
 spring.zipkin.base-url=http://zipkin-server:9411/
